--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,23 +2,76 @@ version: '3.1'
 
 services:
 
-  scheduler_db:
-    image: postgres:12.2
+  prp_postgresql:
+    image: kartoza/postgis:14-3.1 #chip ARM
     restart: on-failure
+    container_name: prp_potgresql
     environment:
-      POSTGRES_USER: scheduler
-      POSTGRES_PASSWORD: example
-      POSTGRES_DB: news_source
+      POSTGRES_USER: postgres
+      POSTGRES_PASS: postgres
+      POSTGRES_DBNAME: pz_property
+      POSTGRES_MULTIPLE_EXTENSIONS: postgis,hstore,postgis_topology,postgis_raster,pgrouting
     ports:
       - 5432:5432
-  rabbitmq:
-    image: bitnami/rabbitmq:3.8
-    restart: on-failure
-    ports:
-      - 4369:4369
-      - 5672:5672
-      - 25672:25672
-      - 15672:15672
+  prp_elasticsearch:
+    image: docker.elastic.co/elasticsearch/elasticsearch:7.14.0
+    container_name: prp_elasticsearch
     environment:
-      RABBITMQ_USERNAME: ad
-      RABBITMQ_PASSWORD: pw
+      - node.name=es01
+      - cluster.name=es-docker-cluster
+      - xpack.security.enabled=false
+      - "discovery.type=single-node"
+      - bootstrap.memory_lock=true
+      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
+    ulimits:
+      memlock:
+        soft: -1
+        hard: -1
+    volumes:
+      - prp_elasticsearch_data:/usr/share/elasticsearch/data
+    ports:
+      - 9200:9200
+    networks:
+      - prp_elasticsearch_net
+
+  prp_kibana:
+    container_name: prp_kibana
+    image: docker.elastic.co/kibana/kibana:7.14.0
+    environment:
+      - ELASTICSEARCH_HOSTS=http://prp_elasticsearch:9200
+    networks:
+      - prp_elasticsearch_net
+    depends_on:
+      - prp_elasticsearch
+    ports:
+      - 5601:5601
+  prp_redis:
+    image: redis
+    ports:
+      - 6379:6379
+  prp_activemq:
+    image: rabbitmq:3.9.11-management-alpine
+    restart: always
+    ports:
+      - 15672:15672
+      - 5672:5672
+  prp_graphite:
+    image: graphiteapp/graphite-statsd
+    ports:
+      - 80:80
+      - 2003-2004:2003-2004
+      - 2023-2024:2023-2024
+      - 8125:8125/udp
+      - 8126:8126
+  prp_jaeger:
+    image: jaegertracing/all-in-one:latest
+    ports:
+      - "6831:6831/udp"
+      - "16686:16686"
+networks:
+  prp_elasticsearch_net:
+    driver: bridge
+
+volumes:
+  prp_elasticsearch_data:
+
