--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -68,6 +68,17 @@ services:
     ports:
       - "6831:6831/udp"
       - "16686:16686"
+  prp_keycloak:
+    image: jboss/keycloak:16.1.1
+    environment:
+      KEYCLOAK_USER: admin
+      KEYCLOAK_PASSWORD: admin
+      DB_USER: postgres
+      DB_PASSWORD: postgres
+      DB_VENDOR: postgres
+      JAVA_OPTS_APPEND: -Dkeycloak.profile.feature.docker=enabled
+    ports:
+      - 8080:8080
 networks:
   prp_elasticsearch_net:
     driver: bridge
