--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,72 +13,84 @@ services:
       POSTGRES_MULTIPLE_EXTENSIONS: postgis,hstore,postgis_topology,postgis_raster,pgrouting
     ports:
       - 5432:5432
-  prp_elasticsearch:
-    image: docker.elastic.co/elasticsearch/elasticsearch:7.14.0
-    container_name: prp_elasticsearch
-    environment:
-      - node.name=es01
-      - cluster.name=es-docker-cluster
-      - xpack.security.enabled=false
-      - "discovery.type=single-node"
-      - bootstrap.memory_lock=true
-      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
-    ulimits:
-      memlock:
-        soft: -1
-        hard: -1
-    volumes:
-      - prp_elasticsearch_data:/usr/share/elasticsearch/data
-    ports:
-      - 9200:9200
-    networks:
-      - prp_elasticsearch_net
+  # prp_elasticsearch:
+  #   image: docker.elastic.co/elasticsearch/elasticsearch:7.14.0
+  #   container_name: prp_elasticsearch
+  #   environment:
+  #     - node.name=es01
+  #     - cluster.name=es-docker-cluster
+  #     - xpack.security.enabled=false
+  #     - "discovery.type=single-node"
+  #     - bootstrap.memory_lock=true
+  #     - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
+  #   ulimits:
+  #     memlock:
+  #       soft: -1
+  #       hard: -1
+  #   volumes:
+  #     - prp_elasticsearch_data:/usr/share/elasticsearch/data
+  #   ports:
+  #     - 9200:9200
+  #   networks:
+  #     - prp_elasticsearch_net
 
-  prp_kibana:
-    container_name: prp_kibana
-    image: docker.elastic.co/kibana/kibana:7.14.0
-    environment:
-      - ELASTICSEARCH_HOSTS=http://prp_elasticsearch:9200
-    networks:
-      - prp_elasticsearch_net
-    depends_on:
-      - prp_elasticsearch
-    ports:
-      - 5601:5601
+  # prp_kibana:
+  #   container_name: prp_kibana
+  #   image: docker.elastic.co/kibana/kibana:7.14.0
+  #   environment:
+  #     - ELASTICSEARCH_HOSTS=http://prp_elasticsearch:9200
+  #   networks:
+  #     - prp_elasticsearch_net
+  #   depends_on:
+  #     - prp_elasticsearch
+  #   ports:
+  #     - 5601:5601
   prp_redis:
     image: redis
     ports:
       - 6379:6379
-  prp_activemq:
-    image: rabbitmq:3.9.11-management-alpine
-    restart: always
-    ports:
-      - 15672:15672
-      - 5672:5672
-  prp_graphite:
-    image: graphiteapp/graphite-statsd
-    ports:
-      - 80:80
-      - 2003-2004:2003-2004
-      - 2023-2024:2023-2024
-      - 8125:8125/udp
-      - 8126:8126
-  prp_jaeger:
-    image: jaegertracing/all-in-one:latest
-    ports:
-      - "6831:6831/udp"
-      - "16686:16686"
+  # prp_activemq:
+  #   image: rabbitmq:3.9.11-management-alpine
+  #   restart: always
+  #   ports:
+  #     - 15672:15672
+  #     - 5672:5672
+  #     - 61613:61613
+  #     - 1883:1883
+  # prp_graphite:
+  #   image: graphiteapp/graphite-statsd
+  #   ports:
+  #     - 80:80
+  #     - 2003-2004:2003-2004
+  #     - 2023-2024:2023-2024
+  #     - 8125:8125/udp
+  #     - 8126:8126
+  # prp_jaeger:
+  #   image: jaegertracing/all-in-one:latest
+  #   ports:
+  #     - "6831:6831/udp"
+  #     - "16686:16686"
   prp_keycloak:
-    image: jboss/keycloak:16.1.1
+    image: jboss/keycloak:15.0.2
     environment:
       KEYCLOAK_USER: admin
       KEYCLOAK_PASSWORD: admin
       DB_USER: postgres
+      DB_ADDR: prp_postgresql:5432
       DB_PASSWORD: postgres
       DB_VENDOR: postgres
-      JAVA_OPTS_APPEND: -Dkeycloak.profile.feature.docker=enabled
+      DB_DATABASE: keycloak_docker
+      PROPZY_REDIS_HOST: prp_redis
+      PROPZY_REDIS_PORT: 6379
+      PROPZY_REDIS_SSL: "true"
+      JAVA_OPTS_APPEND: -Dkeycloak.profile=preview
     ports:
       - 8080:8080
+    depends_on:
+      - prp_postgresql
+    volumes:
+    - /home/ndhai/workspace/propzy/core/keycloak-listener/target/keycloak-event-listener.jar://opt/jboss/keycloak/standalone/deployments/keycloak-event-listener.jar
+
 networks:
   prp_elasticsearch_net:
     driver: bridge
