--- a/mysql.yml
+++ b/mysql.yml
@@ -2,7 +2,7 @@ version: '3.1'
 
 services:
  mysqldb:
-    image: mysql:8.0.17
+    image: mysql
     command: --default-authentication-plugin=mysql_native_password
     restart: always
     environment:
